syntax = "proto3";

enum MessageType {
    normal = 0;
    frame = 1;
    id_response = 2;
}

message PlayerId {
    MessageType type = 1;
    int32 player_id = 2;
}

message Point {
    int32 x = 1;
    int32 y = 2;
}

message InputRequest {
    int32 player_id = 1;
    int32 input = 2;
}

message ControllerResponse {
    Point position = 1;
    Point cannon_position = 2;
}

message ServerOutput {
    MessageType type = 1;
    repeated ControllerResponse responses = 2;
}